<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prefix_step_text"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="2dp"
        android:id="@+id/steps_count"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="10sp"
        android:paddingLeft="5dp"/>

    <EditText
        android:layout_width="310dp"
        android:layout_height="74dp"
        android:hint="@string/hint_enter_instruction"
        android:id="@+id/steps_text"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textIsSelectable="true"
        android:selectAllOnFocus="true"
        android:inputType="textCapSentences"
        android:layout_below="@+id/steps_count"
        android:layout_alignStart="@+id/steps_count"
        android:textSize="15sp"
        android:gravity="top"/>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:id="@+id/delete"
        android:src="@drawable/ic_action_discard_dark"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/steps_text"
        android:contentDescription="@string/delete_steps_icon"/>
</RelativeLayout>